k8s-services/network/templates/isolate-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-db
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: todolist-api
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: todolist-api
